--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -65,7 +65,6 @@ h6 {
  *footer
  */
 .footer {
-
 }
 
 /*
@@ -95,6 +94,7 @@ h6 {
   &--justified {
     display: flex;
     flex-grow: 1;
+    flex-wrap: wrap;
     justify-content: space-between;
   }
 }
@@ -112,6 +112,7 @@ h6 {
 }
 
 .nav__mobile-menu__toggle {
+  display: inline-flex;
   @media (min-width: 960px) {
     display: none;
   }
@@ -191,8 +192,10 @@ $gutter : 1rem;
 }
 
 .column {
-  float: left;
   padding: 0 $gutter;
+  @media (min-width: 960px) {
+    float: left;
+  }
 }
 
 .column--4-12 { width: percentage(4/12); }
